modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/required-annotations/rendered/test_samples/pods/002-dep-allowed.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        bar: xxx.example.com
        foo: bar
    name: allowed
    namespace: default
spec:
    containers:
        - image: nginx
          name: nginx
    selector:
        matchLabels:
            foo: bar
    template:
        spec:
            containers:
                - name: foo
