modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/required-annotations/rendered/test_samples/pods/003-pod-disallowed.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    annotations:
        bar: xxx
        foo: bar
    name: disallowed
    namespace: default
spec:
    containers:
        - image: nginx
          name: nginx
