modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/required-annotations/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8requiredannotations
tests:
  - name: d8requiredannotations
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: pod-allowed
        object: test_samples/pods/001-pod-allowed.yaml
        assertions:
          - violations: "no"
      - name: dep-allowed
        object: test_samples/pods/002-dep-allowed.yaml
        assertions:
          - violations: "no"
      - name: pod-disallowed
        object: test_samples/pods/003-pod-disallowed.yaml
        assertions:
          - violations: "yes"
      - name: dep-disallowed
        object: test_samples/pods/004-dep-disallowed.yaml
        assertions:
          - message: 'you must provide annotations: {"foo"}'
            violations: "yes"
